# AnyOption

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  anyoption.cpp  anyoption.h  appveyor.yml  demo  demo.cpp  options.txt  test.cpp  test.sh
cmake/: catch2.cmake
src/: anyoption.cpp
tests/: test.cpp  test.sh
